                      escape sequence
 - Fix for bug 34944: Ensure every threads holds its own IDBasedFileAccess instance
 - Fix for bug 34975: Log an exceeded rate limit only once per minute
 - Fix for bug 34922: Properly re-initialize config-cascade's "server" configuration provider on configuration reload trigger

* 2014-10-15 - martin.herfurth@open-xchange.com

 - Fix for bug 34962: Mail notification on state changes for organizer.

* 2014-10-14 - marcus.klein@open-xchange.com

 - Fix for bug 34517: Put Kerberos tickets of session parameters into distributed session storage.

* 2014-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 34920: Do not close SQL resources on SearchIterator creation
 - Fix for bug 33862: Signal former folder type "7" for shared/public mail folders for USM-* clients

* 2014-10-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34896: Initialize member before first accessing it
 - Fix for bug 34897: Consider number of files in context for "amount"-type quota

* 2014-10-10 - thorben.betten@open-xchange.com

 - Fix for bug 34861: Use shorter call-back URL as IE seems to cut off call-back URL if certain size is exceeded
 - Fix for bug 34755: Support unquoted, mime-encoded personal part in an E-Mail address string
 - Fix for bug 34806: Accept any letters in CSS values

* 2014-10-09 - thorben.betten@open-xchange.com

 - Fix for bug 34776: Drop passed Message-ID header on draft-edit action
 - Fix for bug 34867: Added missing import to 'com.openexchange.mailfilter.json' bundle

* 2014-10-09 - steffen.templin@open-xchange.com

 - Fix for bug 34850: Find API now returns user input as is, i.e. clients must not interpret it as HTML.

* 2014-10-09 - marcus.klein@open-xchange.com

 - Fix for bug 34846: Marked guard.properties as configuration file.

* 2014-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 34812: Restored required "read_stream" permission when initializing a new Facebook OAuth account,